name:                bird2tex
version:             0.1.0.0
synopsis:            Tool to convert literate code from Bird-style to LaTeX-style.
description:         Tool to convert literate code from Bird-style to LaTeX-style.
license:             BSD3
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           2014 (c) Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable bird2tex
  main-is:             bird2tex.lhs
  other-extensions:    OverloadedStrings
  build-depends:       base, bytestring
  default-language:    Haskell2010
