name:                unlit
version:             0.1.0.0
description:         Tool to convert literate code between styles or to code.
license:             BSD3
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijn.kokke@gmail.com
copyright:           2014 (c) Pepijn Kokke
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable unlit
  main-is:             unlit.lhs
  other-extensions:    OverloadedStrings
  build-depends:       base, text
  default-language:    Haskell2010
